fix padding breaking on small select

--- a/nebula-components/components/_select.scss
+++ b/nebula-components/components/_select.scss
@@ -30,6 +30,7 @@
 
     &.#{$nb-namespace}c-select--sm {
       padding: $nb-select-padding-sm;
+      padding-right: 3rem;
       background-size: auto 1.2rem;
     }
   }
